tests/parser/validinput/typedunusedvar.idp
vocabulary MyVoc{
 	type Person
	P(Person)
}

structure S1 : MyVoc{
 	Person = {Bob2}
}
 
theory T:MyVoc{
	! x y[Person]: P(x).
}

procedure main(){
	return 1
}
